--- a/index_files/style.css
+++ b/index_files/style.css
@@ -7,14 +7,14 @@ body{
 }
 #main_container{
     background-color: #616161;
-    width: 70%;
     height: 300%;
-    margin-left: 15%;
+    width: 100%;
+    margin-left: 0;
 }
 #sticky{
     position: sticky;
     top:0px;
-    height: 100px;
+    height: 80px;
     background-color: #373737;
     padding:3%;
 }
@@ -25,25 +25,23 @@ body{
     border-color: #222222;
     border-radius:90px;
     background-color: #d81b60;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     float: left;
-    margin-right: 5%;
 }
 #nav{
     border-radius:3px;
     border-style: solid;
     border-width: 1px;
     border-color: #616161;
-    padding-top: 5px;
     font-size: 200%;
     text-align: center;
     position: relative;
-    float: left;
+    float: right;
     height: 40px;
-    width: 16%;
+    width: 14%;
     background-color: #373737;
-    margin: 25px 3% 25px 2%;
+    margin: 20px 20px 20px 0;
 }
 a{
     text-decoration: none;
@@ -52,9 +50,6 @@ a{
 #container{
     padding: 50px 100px 0 100px;
 }
-@media only screen and (max-width: 1919px) {
-    #main_container{
-    width: 100%;
-    margin-left: 0;
-    }
+@media screen and (max-width: 71em) {
+
 }
