--- a/index_files/style.css
+++ b/index_files/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
 body {
+    background-color: #3a3a3a;
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
@@ -13,7 +14,7 @@ body {
 #sticky {
     position: relative;
     top: 0px;
-    background-color: #fff;
+    background-color: #3a3a3a;
     height: 80px;
     padding: 3%;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
@@ -21,7 +22,6 @@ body {
 
 #logo {
     position: relative;
-    border-right-style: none;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.20);
     border-radius: 90px;
     background-color: #d81b60;
