--- a/index_files/style.css
+++ b/index_files/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
 body {
-    background-color: #3a3a3a;
+    position: relative;
+    color: #000;
+    background-color: #7dd3b9;
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
@@ -12,35 +14,22 @@ body {
 }
 
 #sticky {
-    position: relative;
+    background-color: #ffffff;
+    text-align: center;
+    font-size: 200%;
     top: 0px;
-    background-color: #3a3a3a;
-    height: 80px;
-    padding: 3%;
+    height: 40px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
+    padding: 20px 20px 20px 0;
+    text-indent: 20px;
 }
 
-#logo {
-    position: relative;
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.20);
-    border-radius: 90px;
-    background-color: #d81b60;
-    height: 80px;
-    width: 80px;
+#f_left {
     float: left;
 }
 
-#nav {
-    /* box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
-    border-radius: 5px;
-    border: 1px solid #DFE1E5; */
-    font-size: 200%;
-    text-align: center;
-    position: relative;
+#f_right {
     float: right;
-    height: 40px;
-    width: auto;
-    margin: 20px 20px 20px 0;
 }
 
 a {
@@ -49,10 +38,14 @@ a {
 }
 
 #container__mainpage {
-    margin:0 12% 0 12%;
+    margin: 0 12% 0 12%;
+    padding: 40px;
+    text-indent: 20px;
+    background-color: #fff;
 }
 
 .kafle {
+    color: #17252a;
     position: relative;
     margin: 10px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
@@ -60,7 +53,7 @@ a {
     border-radius: 20px;
     width: 120px;
     float: left;
-    background-color: #efebe9;
+    background-color: #def2f1;
 }
 
 #d1,
@@ -86,7 +79,7 @@ a {
 }
 
 #textbox {
-    background-color: #efebe9;
+    background-color: #def2f1;
     height: 72px;
     padding: 10px 20px 30px 20px;
     width: 360px;
@@ -103,7 +96,7 @@ a {
 }
 
 #button {
-    background-color: #efebe9;
+    background-color: #def2f1;
     padding: 0;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
     width: 198px;
@@ -118,7 +111,7 @@ a {
 }
 
 #button2 {
-    background-color: #efebe9;
+    background-color: #def2f1;
     float: right;
     padding: 0;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
