--- a/index_files/style.css
+++ b/index_files/style.css
@@ -38,7 +38,7 @@ a {
 }
 
 #container__mainpage {
-    margin: 1.5% 12% 0 12%;
+    margin: 1.5% 12% 1.5% 12%;
     padding: 40px;
     text-indent: 20px;
     background-color: #fff;
