--- a/index_files/style_light.css
+++ b/index_files/style_light.css
@@ -7,23 +7,31 @@ body {
     margin: 0;
 }
 
-.dark_theme {
-    color: #fff;
+#color_changer{
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
+    0 3px 3px -2px rgba(0, 0, 0, 0.12),
+    0 1px 8px 0 rgba(0, 0, 0, 0.20);
+    top:200px;
+    position: fixed;
+    z-index: +2;
     background-color: #616161;
+    height: 70px;
+    border-radius: 0px 20px 20px 0px;
+    width: 60px;
 }
 
-.light_theme {
+.theme {
     color: #000;
     background-color: #fff;
 }
 
 #sticky {
+    position: sticky;
     text-align: center;
     font-size: 200%;
     top: 0px;
-    height: 40px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
-    padding: 20px 20px 20px 0;
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.20);
+    padding: 15px 15px 15px 0;
     text-indent: 20px;
 }
 
@@ -41,6 +49,7 @@ a {
 }
 
 #main_container {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
     margin: 1.5% 12% 1.5% 12%;
     padding: 40px;
     text-indent: 20px;
@@ -51,13 +60,14 @@ a {
 .kafle {
     color: #17252a;
     position: relative;
-    margin: 10px;
+    margin: .5vw;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
-    height: 120px;
+    height: 8vw;
     border-radius: 20px;
-    width: 120px;
+    width: 8vw;
     float: left;
     background-color: #def2f1;
+    font-size: 6vw;
 }
 
 #d1,
@@ -66,79 +76,64 @@ a {
     clear: both;
 }
 
-#motyw {
-    padding-top: 10px;
-    padding-bottom: 0px;
-    height: 60px;
-    width: 400px;
-    clear: both;
-    text-align: center;
-}
-
 #restart {
     height: auto;
-    padding: 20px;
-    width: 360px;
+    padding: 1vw;
+    width: 24vw;
     clear: both;
+    text-align: center;
+    font-weight: 500;
 }
 
 #textbox {
     background-color: #def2f1;
-    height: 72px;
-    padding: 10px 20px 30px 20px;
-    width: 360px;
+    height: 6vw;
+    padding: .5vw 1vw 1.5vw 1vw;
+    width: 24vw;
     text-align: center;
-    font-size: 72px;
     font-weight: 500;
 }
 
-#p_reset {
-    margin: 0;
-    text-align: center;
-    font-size: 72px;
-    font-weight: 500;
-}
-
-#button {
+.b_kafle {
+    font-size: 6vw;
     background-color: #def2f1;
     padding: 0;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
-    width: 198px;
-    height: 112px;
+    width: 13vw;
+    height: 8vw;
     border-style: none;
+    text-align: center;
+    display: inline-block;
+    font-weight: 400;
+}
+
+#b1 {
+    border-right-style: solid;
+    border-color: #000;
     border-radius: 20px 0 0 20px;
-    margin: -10 2 0 -20;
-    text-align: center;
-    display: inline-block;
-    font-size: 72px;
-    font-weight: 400;
+    margin: -.5vw 0 0 -1.1vw;
 }
 
-#button2 {
-    background-color: #def2f1;
+#b2 {
     float: right;
-    padding: 0;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
-    width: 198px;
-    height: 112px;
-    border-style: none;
     border-radius: 0 20px 20px 0;
-    margin: -10 -20 0 2;
-    text-align: center;
-    display: inline-block;
-    font-size: 72px;
-    font-weight: 400;
+    margin: -.5vw -1vw 0 0;
 }
-
+#ttt{
+    padding: 4vw 35vw 0 35vw
+}
 /* //tictactoe// */
 
 .pixele {
     color: #17252a;
     position: relative;
-    height: 1em;
-    width: 1em;
+    height: 10px;
+    width: 10px;
     float: left;
     background-color: #fff;
 }
 
-@media screen and (max-width: 71em) {}
+@media screen and (max-width: 71em) {
+    #ttt{
+        
+    }
+}
