--- a/index_files/style_light.css
+++ b/index_files/style_light.css
@@ -170,7 +170,7 @@ a {
         width: 39vw;
         height: 21vw;
     }
-
+gabrysia to debski XD
     #b1 {
         margin: -3vw 0 0 -3.3vw;
     }
