--- a/index_files/style_light.css
+++ b/index_files/style_light.css
@@ -1,172 +1,172 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
 
 body {
-    position: relative;
-    color: #000;
-    background-color: #7dd3b9;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
+  position: relative;
+  color: #000;
+  background-color: #7dd3b9;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
 }
 
 #color_changer {
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-        0 3px 3px -2px rgba(0, 0, 0, 0.12),
-        0 1px 8px 0 rgba(0, 0, 0, 0.20);
-    top: 200px;
-    position: fixed;
-    z-index: +2;
-    background-color: #616161;
-    height: 70px;
-    border-radius: 0px 20px 20px 0px;
-    width: 60px;
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
+    0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+  top: 200px;
+  position: fixed;
+  z-index: +2;
+  background-color: #616161;
+  height: 70px;
+  border-radius: 0px 20px 20px 0px;
+  width: 60px;
 }
 
 .theme {
-    color: #000;
-    background-color: #fff;
+  color: #000;
+  background-color: #fff;
 }
 
 #sticky {
-    width:100%;
-    position: fixed;
-    text-align: center;
-    font-size: 200%;
-    bottom: 0%;
-    box-shadow: 0 -2px 4px 1px rgba(0, 0, 0, 0.14);
-    padding: 15px 15px 15px 0;
-    text-indent: 20px;
-    transition: bottom 0.3s;
+  width: 100%;
+  position: fixed;
+  text-align: center;
+  font-size: 200%;
+  bottom: 0%;
+  box-shadow: 0 -2px 4px 1px rgba(0, 0, 0, 0.14);
+  padding: 15px 15px 15px 0;
+  text-indent: 20px;
+  transition: bottom 0.3s;
 }
 
 #f_left {
-    float: left;
+  float: left;
 }
 
 #f_right {
-    float: right;
+  float: right;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 #main_container {
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
-    margin: 1.5% 12% 1.5% 12%;
-    padding: 40px;
-    text-indent: 20px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  margin: 1.5% 12% 1.5% 12%;
+  padding: 40px;
+  text-indent: 20px;
 }
 
 /* tictactoe */
 
 .kafle {
-    color: #17252a;
-    position: relative;
-    margin: .5vw;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.20);
-    height: 8vw;
-    border-radius: 20px;
-    width: 8vw;
-    float: left;
-    background-color: #def2f1;
-    font-size: 4.5vw;
+  color: #17252a;
+  position: relative;
+  margin: 0.5vw;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  height: 8vw;
+  border-radius: 20px;
+  width: 8vw;
+  float: left;
+  background-color: #def2f1;
+  font-size: 4.5vw;
 }
 
 #d1,
 #d4,
 #d7 {
-    clear: both;
+  clear: both;
 }
 
 #restart {
-    height: auto;
-    padding: 1vw;
-    width: 24vw;
-    clear: both;
-    text-align: center;
-    font-weight: 500;
+  height: auto;
+  padding: 1vw;
+  width: 24vw;
+  clear: both;
+  text-align: center;
+  font-weight: 500;
 }
 
 #textbox {
-    background-color: #def2f1;
-    height: 5vw;
-    padding: 1vw;
-    width: 24vw;
-    text-align: center;
-    font-weight: 500;
+  background-color: #def2f1;
+  height: 5vw;
+  padding: 1vw;
+  width: 24vw;
+  text-align: center;
+  font-weight: 500;
 }
 
 .b_kafle {
-    font-size: 4.5vw;
-    background-color: #def2f1;
-    padding: 0;
-    width: 12vw;
-    border-style: none;
-    text-align: center;
-    display: inline-block;
-    font-weight: 400;
+  font-size: 4.5vw;
+  background-color: #def2f1;
+  padding: 0;
+  width: 12vw;
+  border-style: none;
+  text-align: center;
+  display: inline-block;
+  font-weight: 400;
 }
 
 #b1 {
-    border-right-style: solid;
-    border-color: #000;
-    border-radius: 20px 0 0 20px;
-    float: left;
+  border-right-style: solid;
+  border-color: #000;
+  border-radius: 20px 0 0 20px;
+  float: left;
 }
 
 #b2 {
-    float: right;
-    border-radius: 0 20px 20px 0;
+  float: right;
+  border-radius: 0 20px 20px 0;
 }
 
 #ttt {
-    padding: 3.5vw 35vw 0 35vw
+  padding: 3.5vw 35vw 0 35vw;
 }
-#pole{
-    height: 8vw;
-    width: 8vw;
+#pole {
+  height: 8vw;
+  width: 8vw;
 }
 /* //tictactoe// */
 
 .pixele {
-    color: #17252a;
-    position: relative;
-    height: 10px;
-    width: 10px;
-    float: left;
-    background-color: #fff;
+  color: #17252a;
+  position: relative;
+  height: 10px;
+  width: 10px;
+  float: left;
+  background-color: #fff;
 }
 
 @media screen and (max-width: 71em) {
-    #ttt {
-        padding: 8vw;
+  #ttt {
+    padding: 8vw;
+  }
 
-    }
+  #textbox {
+    height: 15vw;
+    padding: 3vw;
+    width: 72vw;
+  }
 
-    #textbox {
-        height: 15vw;
-        padding: 3vw;
-        width: 72vw;
-    }
-
-    .kafle {
-        margin: 1.5vw;
-        height: 24vw;
-        border-radius: 20px;
-        width: 24vw;
-        font-size: 13.5vw;
-    }
-    #restart {
-        padding: 3vw;
-        width: 72vw;
-    }
-    #pole {
-        height: 24vw;
-        width: 24vw;
-    }
-    .b_kafle {
-        font-size: 13.5vw;
-        width: 36vw;
-    }
-/* gabrysia to debski XD */
+  .kafle {
+    margin: 1.5vw;
+    height: 24vw;
+    border-radius: 20px;
+    width: 24vw;
+    font-size: 13.5vw;
+  }
+  #restart {
+    padding: 3vw;
+    width: 72vw;
+  }
+  #pole {
+    height: 24vw;
+    width: 24vw;
+  }
+  .b_kafle {
+    font-size: 13.5vw;
+    width: 36vw;
+  }
+}
