--- a/index_files/style.css
+++ b/index_files/style.css
@@ -2,8 +2,8 @@
 
 body {
   position: relative;
-  color: #000;
-  background-color: #7dd3b9;
+  color: var(--main-fg-colour);
+  background-color: var(--body-bg-colour);
   font-family: "Roboto", sans-serif;
   margin: 0;
 }
@@ -14,16 +14,16 @@ body {
   top: 200px;
   position: fixed;
   z-index: +2;
-  background-color: #616161;
+  background-color: var(--colour-changer-button);
   height: 70px;
   border-radius: 0px 20px 20px 0px;
   width: 60px;
 }
 
-.theme {
-  color: #000;
-  background-color: #fff;
-}
+/* .theme {
+  color: var(--main-fg-colour);
+  background-color: var(--main-bg-colour);
+} */
 
 #sticky {
   width: 100%;
@@ -34,6 +34,8 @@ body {
   box-shadow: 0 -2px 4px 1px rgba(0, 0, 0, 0.14);
   padding: 15px 15px 15px 0;
   text-indent: 20px;
+  color: var(--main-fg-colour);
+  background-color: var(--main-bg-colour);
   transition: bottom 0.3s;
 }
 
@@ -51,6 +53,8 @@ a {
 }
 
 #main_container {
+  color: var(--main-fg-colour);
+  background-color: var(--main-bg-colour);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   margin: 1.5% 12% 1.5% 12%;
@@ -61,7 +65,7 @@ a {
 /* tictactoe */
 
 .kafle {
-  color: #17252a;
+  color: var(--kafle-fg-colour);
   position: relative;
   margin: 0.5vw;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -70,7 +74,7 @@ a {
   border-radius: 20px;
   width: 8vw;
   float: left;
-  background-color: #def2f1;
+  background-color: var(--kafle-bg-colour);
   font-size: 4.5vw;
 }
 
@@ -90,7 +94,7 @@ a {
 }
 
 #textbox {
-  background-color: #def2f1;
+  background-color: var(--kafle-bg-colour);
   height: 5vw;
   padding: 1vw;
   width: 24vw;
@@ -100,7 +104,7 @@ a {
 
 .b_kafle {
   font-size: 4.5vw;
-  background-color: #def2f1;
+  background-color: var(--kafle-bg-colour);
   padding: 0;
   width: 12vw;
   border-style: none;
@@ -111,7 +115,7 @@ a {
 
 #b1 {
   border-right-style: solid;
-  border-color: #000;
+  border-color: var(--main-fg-colour);
   border-radius: 20px 0 0 20px;
   float: left;
 }
@@ -131,12 +135,12 @@ a {
 /* //tictactoe// */
 
 .pixele {
-  color: #17252a;
+  color: var(--kafle-fg-colour);
   position: relative;
   height: 10px;
   width: 10px;
   float: left;
-  background-color: #fff;
+  background-color: var(--main-bg-colour);
 }
 
 @media screen and (max-width: 71em) {
