--- a/index_files/light.css
+++ b/index_files/light.css
@@ -4,7 +4,7 @@
   --main-bg-colour: #fff;
   --kafle-fg-colour: #17252a;
   --kafle-bg-colour: #def2f1;
-  --szafy-fg-colour:;
+  --szafy-fg-colour:#f6ddac;
   --szafy-bg-colour:#582d1b;
   --colour-changer-button: #616161;
 }
