--- a/index_files/style.css
+++ b/index_files/style.css
@@ -4,7 +4,8 @@ body {
   position: relative;
   color: var(--main-fg-colour);
   background-color: var(--body-bg-colour);
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto",
+    sans-serif;
   margin: 0;
   height: 100vh;
   display: grid;
@@ -55,6 +56,7 @@ a {
 }
 
 #main_container {
+  border-radius: 5px;
   color: var(--main-fg-colour);
   background-color: var(--main-bg-colour);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
